--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
 
 <body>
   <main>
-    <h1 id="title">SlasK</h1>
-    <p id="message">The slask oh yeah</p>
+    <h1 id="title">lorem</h1>
+    <div class="asdflkj">
+      <p id="message">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta consequuntur commodi voluptatibus ullam deserunt quia tempore harum numquam. Sed enim doloribus dolore ea laborum magnam eius, laboriosam maiores maxime blanditiis!</p>
+      <img src="https://picsum.photos/500/500" alt="lorem">
+    </div>
   </main>
   <script src="js/Particle.js"></script>
   <script src="js/main.js"></script>
 </body>
-
 </html>
